--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest"
+    "test": "jest",
+    "test:coverage": "jest --coverage",
+    "server": "json-server --watch db.json --port 5000"
   },
   "dependencies": {
     "axios": "^1.7.9",
@@ -29,7 +31,9 @@
     "eslint-config-next": "15.1.3",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
+    "jest-cli": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "json-server": "^1.0.0-beta.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "ts-jest": "^29.2.5",
