--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
+    "cors": "^2.8.5",
     "next": "15.1.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
